Avoid new Boolean()